kubernetes/apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
spec:
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
