kubernetes/apps/pgadmin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  parentRefs:
    - name: homelab
  rules:
    - matches:
        - path:
            type: Exact
            value: /pgadmin
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /pgadmin/
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /pgadmin/
      backendRefs:
        - name: pgadmin
          port: 8080
